얼굴인식 후 추출 처리
얼굴 인식 후 눈의 개수 체크 후 추출 처리

--- a/002_사진에서_얼굴_추출_후_자르기.ipynb
+++ b/002_사진에서_얼굴_추출_후_자르기.ipynb
@@ -15,12 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "face_cascades = cv2.CascadeClassifier('./98_LearningData/00_haarcascades/haarcascade_frontalface_default.xml')"
+    "face_cascades = cv2.CascadeClassifier('./98_LearningData/00_haarcascades/haarcascade_frontalface_default.xml')\n",
+    "eye_cascades = cv2.CascadeClassifier('./98_LearningData/00_haarcascades/haarcascade_lefteye_2splits.xml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,21 +41,31 @@
     "        for(x, y, width, height) in faces:\n",
     "            #이미지 자르기\n",
     "            img_trim = img[y:y+height, x:x+width]\n",
+    "                        \n",
+    "            eye_list = eye_cascades.detectMultiScale(img_trim,scaleFactor = 1.15, minNeighbors=1,minSize=(10,10))\n",
     "            \n",
-    "            #파일명 만들기\n",
-    "            timFileName = fileName.replace(\".jpg\", \"\")\n",
-    "            timFileName += \"_\" + str(iOrd) + \".jpg\"\n",
-    "            \n",
-    "            #자른 이미지 저장\n",
-    "            cv2.imwrite('./98_LearningData/03_Trim/' + timFileName, img_trim)\n",
-    "            \n",
-    "            print(str(iOrd) + \"번째 얼굴 검출 완료\")\n",
-    "            iOrd += 1"
+    "            #눈이 있을 경우(잡힌게 2개 이상)\n",
+    "            if len(eye_list) >= 2:\n",
+    "                '''눈 부분에 표시 처리\n",
+    "                for eye in eye_list:\n",
+    "                    eyeX,eyeY,eyeW,eyeH = eye\n",
+    "                    cv2.rectangle(img_trim, (eyeX, eyeY), (eyeX + eyeW, eyeY + eyeH), (0, 255, 0), thickness=8)\n",
+    "                '''\n",
+    "                #파일명 만들기\n",
+    "                timFileName = fileName.replace(\".jpg\", \"\")\n",
+    "                timFileName += \"_\" + str(iOrd) + \".jpg\"            \n",
+    "\n",
+    "\n",
+    "                #자른 이미지 저장\n",
+    "                cv2.imwrite('./98_LearningData/03_Trim/' + timFileName, img_trim)\n",
+    "\n",
+    "                print(str(iOrd) + \"번째 얼굴 검출 완료[눈 : \" + str(len(eye_list)) + \"]\")\n",
+    "                iOrd += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -81,192 +92,155 @@
      "output_type": "stream",
      "text": [
       "=============================[20181225_113822.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 3]\n",
+      "3번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113822.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_113825.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113825.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_113828.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113828.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_113829.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 3]\n",
+      "3번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113829.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_113832.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113832.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_113834.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113834.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_113836.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
-      "5번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 4]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113836.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_113837.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113837.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_113842.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20181225_113842.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_122954.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
-      "5번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_122954.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_123006.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
-      "5번째 얼굴 검출 완료\n",
-      "6번째 얼굴 검출 완료\n",
-      "7번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
+      "2번째 얼굴 검출 완료[눈 : 3]\n",
+      "3번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20181225_123006.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190407_143836.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 4]\n",
+      "2번째 얼굴 검출 완료[눈 : 4]\n",
+      "3번째 얼굴 검출 완료[눈 : 4]\n",
       "=============================[20190407_143836.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190407_143839.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 4]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20190407_143839.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190407_143843.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 4]\n",
+      "3번째 얼굴 검출 완료[눈 : 4]\n",
       "=============================[20190407_143843.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190623_174727.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
+      "2번째 얼굴 검출 완료[눈 : 3]\n",
+      "3번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20190623_174727.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190811_151002.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20190811_151002.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190811_151007.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20190811_151007.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190816_165614.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 5]\n",
+      "3번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20190816_165614.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190816_165618.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 4]\n",
+      "3번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20190816_165618.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190817_133401.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
-      "5번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20190817_133401.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190817_133404.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
+      "2번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20190817_133404.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190831_175002.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20190831_175002.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190831_175003.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20190831_175003.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20191116_093347.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20191116_093347.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20191230_142329.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 4]\n",
+      "2번째 얼굴 검출 완료[눈 : 4]\n",
+      "3번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20191230_142329.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20191230_142344.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
+      "3번째 얼굴 검출 완료[눈 : 4]\n",
       "=============================[20191230_142344.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200202_111146.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20200202_111146.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200229_152440.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 4]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200229_152440.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200229_152444.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200229_152444.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200229_152453.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200229_152453.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200702_140330.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200702_140330.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200702_140333.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200702_140333.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200702_155044.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20200702_155044.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_102551.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200703_102551.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_102603.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20200703_102603.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_103518.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200703_103518.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_104953.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 5]\n",
       "=============================[20200703_104953.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_105001.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 6]\n",
       "=============================[20200703_105001.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_105006.jpg] 얼굴 검출 시작=============================\n"
      ]
@@ -275,26 +249,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200703_105006.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_105007.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 4]\n",
       "=============================[20200703_105007.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_105009.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
-      "4번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 4]\n",
       "=============================[20200703_105009.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_105010.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
-      "3번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20200703_105010.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_105012.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료\n",
-      "2번째 얼굴 검출 완료\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200703_105012.jpg] 얼굴 검출 종료=============================\n"
      ]
     }
@@ -338,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
