--- a/502_사진에서_얼굴_추출_후_자르기.ipynb
+++ b/502_사진에서_얼굴_추출_후_자르기.ipynb
@@ -54,7 +54,12 @@
     "                #파일명 만들기\n",
     "                timFileName = fileName.replace(\".jpg\", \"\")\n",
     "                timFileName += \"_\" + str(iOrd) + \".jpg\"            \n",
-    "\n",
+    "                \n",
+    "                #이미지 사이즈 리사이즈 하기\n",
+    "                img_trim = cv2.resize(img_trim,(200,200))\n",
+    "                \n",
+    "                #이미지 흑백 처리\n",
+    "                img_trim = cv2.cvtColor(img_trim, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "                #자른 이미지 저장\n",
     "                cv2.imwrite('./98_LearningData/03_Trim/' + timFileName, img_trim)\n",
@@ -126,8 +131,8 @@
       "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113837.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_113842.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료[눈 : 2]\n",
-      "2번째 얼굴 검출 완료[눈 : 3]\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20181225_113842.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20181225_122954.jpg] 얼굴 검출 시작=============================\n",
       "1번째 얼굴 검출 완료[눈 : 2]\n",
@@ -148,14 +153,14 @@
       "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20190407_143839.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190407_143843.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료[눈 : 2]\n",
-      "2번째 얼굴 검출 완료[눈 : 4]\n",
+      "1번째 얼굴 검출 완료[눈 : 4]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "3번째 얼굴 검출 완료[눈 : 4]\n",
       "=============================[20190407_143843.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190623_174727.jpg] 얼굴 검출 시작=============================\n",
       "1번째 얼굴 검출 완료[눈 : 3]\n",
-      "2번째 얼굴 검출 완료[눈 : 3]\n",
-      "3번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
+      "3번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20190623_174727.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20190811_151002.jpg] 얼굴 검출 시작=============================\n",
       "1번째 얼굴 검출 완료[눈 : 2]\n",
@@ -196,9 +201,9 @@
       "3번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20191230_142329.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20191230_142344.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료[눈 : 3]\n",
-      "2번째 얼굴 검출 완료[눈 : 2]\n",
-      "3번째 얼굴 검출 완료[눈 : 4]\n",
+      "1번째 얼굴 검출 완료[눈 : 2]\n",
+      "2번째 얼굴 검출 완료[눈 : 4]\n",
+      "3번째 얼굴 검출 완료[눈 : 3]\n",
       "=============================[20191230_142344.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200202_111146.jpg] 얼굴 검출 시작=============================\n",
       "1번째 얼굴 검출 완료[눈 : 2]\n",
@@ -230,8 +235,8 @@
       "1번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200703_102551.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_102603.jpg] 얼굴 검출 시작=============================\n",
-      "1번째 얼굴 검출 완료[눈 : 2]\n",
-      "2번째 얼굴 검출 완료[눈 : 3]\n",
+      "1번째 얼굴 검출 완료[눈 : 3]\n",
+      "2번째 얼굴 검출 완료[눈 : 2]\n",
       "=============================[20200703_102603.jpg] 얼굴 검출 종료=============================\n",
       "=============================[20200703_103518.jpg] 얼굴 검출 시작=============================\n",
       "1번째 얼굴 검출 완료[눈 : 2]\n",
