--- a/701_OpenCV를_통한_개인_얼굴인식.ipynb
+++ b/701_OpenCV를_통한_개인_얼굴인식.ipynb
@@ -104,13 +104,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[array([[ 53,  54,  53, ..., 255, 255, 255],\n",
+      "       [ 53,  54,  53, ..., 255, 255, 255],\n",
+      "       [ 52,  51,  50, ..., 255, 255, 255],\n",
+      "       ...,\n",
+      "       [233, 245, 243, ..., 119, 121, 122],\n",
+      "       [253, 217, 160, ..., 119, 122, 121],\n",
+      "       [158, 124,  80, ..., 121, 124, 121]], dtype=uint8), array([[ 53,  45,  47, ..., 255, 255, 255],\n",
+      "       [ 54,  45,  46, ..., 255, 255, 255],\n",
+      "       [ 52,  45,  45, ..., 255, 255, 255],\n",
+      "       ...,\n",
+      "       [ 21,  21,  21, ..., 108, 107, 106],\n",
+      "       [ 21,  20,  20, ..., 107, 106, 105],\n",
+      "       [ 19,  19,  19, ..., 106, 105, 104]], dtype=uint8), array([[ 17,  47, 118, ..., 120,  86,  93],\n",
+      "       [ 48, 126, 179, ..., 193, 147,  92],\n",
+      "       [117, 182, 184, ..., 211, 201, 171],\n",
+      "       ...,\n",
+      "       [ 95,  97,  68, ..., 110, 125, 140],\n",
+      "       [ 95, 100,  71, ..., 133, 132, 146],\n",
+      "       [102, 100,  66, ..., 134, 145, 145]], dtype=uint8), array([[221, 226, 224, ..., 195, 198, 195],\n",
+      "       [226, 220, 221, ..., 197, 199, 197],\n",
+      "       [223, 229, 227, ..., 197, 199, 196],\n",
+      "       ...,\n",
+      "       [112, 106, 113, ..., 232, 217, 174],\n",
+      "       [113, 111, 105, ..., 238, 208, 171],\n",
+      "       [101, 118, 115, ..., 243, 192, 168]], dtype=uint8), array([[203, 205, 206, ..., 195, 195, 194],\n",
+      "       [205, 205, 205, ..., 196, 195, 194],\n",
+      "       [207, 205, 204, ..., 196, 195, 194],\n",
+      "       ...,\n",
+      "       [109, 103, 100, ...,  20,  11,   0],\n",
+      "       [107, 106, 109, ...,   3,   2,   3],\n",
+      "       [104, 106, 104, ...,   7,   1,   0]], dtype=uint8), array([[205, 205, 206, ..., 195, 195, 193],\n",
+      "       [206, 206, 207, ..., 195, 195, 194],\n",
+      "       [206, 207, 208, ..., 196, 196, 195],\n",
+      "       ...,\n",
+      "       [118, 114, 121, ...,   2,   0,   5],\n",
+      "       [114, 120, 107, ...,   4,   9,   4],\n",
+      "       [120, 110,  97, ...,   5,   4,   5]], dtype=uint8), array([[ 55,  59,  53, ...,  12,  13,  20],\n",
+      "       [ 55,  56,  56, ...,  12,  11,  15],\n",
+      "       [ 55,  56,  54, ...,  14,  13,  14],\n",
+      "       ...,\n",
+      "       [146, 152, 140, ..., 250, 250, 250],\n",
+      "       [141, 151, 167, ..., 250, 250, 250],\n",
+      "       [128, 142, 157, ..., 250, 250, 250]], dtype=uint8), array([[161, 162, 163, ..., 154, 153, 151],\n",
+      "       [163, 163, 163, ..., 159, 154, 154],\n",
+      "       [164, 164, 164, ..., 157, 154, 160],\n",
+      "       ...,\n",
+      "       [178, 177, 178, ...,  45,  36,  28],\n",
+      "       [179, 178, 179, ...,  47,  38,  30],\n",
+      "       [180, 179, 179, ...,  47,  36,  27]], dtype=uint8), array([[162, 163, 164, ..., 168, 168, 156],\n",
+      "       [162, 162, 163, ..., 167, 165, 156],\n",
+      "       [162, 162, 162, ..., 164, 163, 161],\n",
+      "       ...,\n",
+      "       [120, 134, 155, ..., 176, 174, 197],\n",
+      "       [132, 132, 156, ..., 176, 195, 170],\n",
+      "       [146, 148, 163, ..., 195, 161, 181]], dtype=uint8), array([[186, 183, 188, ..., 136, 134, 135],\n",
+      "       [181, 186, 184, ..., 134, 135, 141],\n",
+      "       [187, 180, 186, ..., 137, 134, 129],\n",
+      "       ...,\n",
+      "       [150, 150, 150, ..., 105, 110, 109],\n",
+      "       [149, 149, 149, ..., 103, 108, 102],\n",
+      "       [147, 148, 148, ..., 103, 108,  98]], dtype=uint8), array([[112, 113, 134, ..., 112, 112, 110],\n",
+      "       [112, 129, 157, ..., 113, 113, 112],\n",
+      "       [123, 149, 174, ..., 113, 112, 111],\n",
+      "       ...,\n",
+      "       [151, 148, 138, ...,  87,  88,  88],\n",
+      "       [139, 130, 125, ...,  86,  86,  86],\n",
+      "       [128, 129, 126, ...,  86,  85,  82]], dtype=uint8), array([[ 29,  24,  27, ..., 193, 193, 193],\n",
+      "       [ 26,  26,  26, ..., 193, 193, 193],\n",
+      "       [ 25,  25,  32, ..., 193, 193, 193],\n",
+      "       ...,\n",
+      "       [114, 114, 112, ...,  69,  62,  58],\n",
+      "       [113, 113, 113, ...,  81,  77,  73],\n",
+      "       [113, 112, 112, ...,  89,  86,  78]], dtype=uint8), array([[ 28,  25,  25, ..., 193, 193, 193],\n",
+      "       [ 24,  23,  28, ..., 193, 193, 193],\n",
+      "       [ 25,  27,  35, ..., 193, 193, 193],\n",
+      "       ...,\n",
+      "       [113, 113, 114, ...,  91,  95,  98],\n",
+      "       [112, 113, 114, ...,  93,  98,  99],\n",
+      "       [111, 112, 114, ...,  95, 101, 100]], dtype=uint8), array([[ 39,  37,  36, ...,  37,  46,  51],\n",
+      "       [ 34,  34,  35, ...,  36,  42,  53],\n",
+      "       [ 35,  35,  35, ...,  37,  41,  51],\n",
+      "       ...,\n",
+      "       [233, 231, 232, ..., 209, 205, 200],\n",
+      "       [232, 232, 233, ..., 205, 200, 195],\n",
+      "       [233, 234, 235, ..., 201, 196, 193]], dtype=uint8), array([[ 37,  37,  37, ...,  50,  33,  39],\n",
+      "       [ 33,  34,  34, ...,  47,  38,  36],\n",
+      "       [ 34,  34,  35, ...,  47,  47,  36],\n",
+      "       ...,\n",
+      "       [234, 232, 233, ..., 208, 209, 207],\n",
+      "       [234, 233, 233, ..., 206, 210, 210],\n",
+      "       [232, 233, 232, ..., 210, 205, 211]], dtype=uint8), array([[155, 147, 146, ..., 234, 231, 227],\n",
+      "       [158, 156, 153, ..., 230, 228, 229],\n",
+      "       [154, 154, 146, ..., 228, 230, 228],\n",
+      "       ...,\n",
+      "       [112,  97,  79, ..., 138, 136, 133],\n",
+      "       [125,  80,  65, ..., 134, 133, 131],\n",
+      "       [138, 101,  73, ..., 132, 132, 131]], dtype=uint8), array([[23, 16,  8, ..., 20,  9,  8],\n",
+      "       [21, 21, 16, ..., 10,  8, 12],\n",
+      "       [19, 19, 20, ..., 22, 21, 20],\n",
+      "       ...,\n",
+      "       [36, 39, 35, ..., 44, 49, 43],\n",
+      "       [46, 41, 35, ..., 48, 42, 45],\n",
+      "       [44, 46, 45, ..., 43, 51, 44]], dtype=uint8), array([[73, 71, 71, ...,  4,  5,  8],\n",
+      "       [75, 73, 77, ...,  4,  4,  5],\n",
+      "       [78, 75, 73, ...,  4,  3,  4],\n",
+      "       ...,\n",
+      "       [91, 89, 81, ..., 16, 24, 22],\n",
+      "       [99, 97, 98, ..., 20, 15, 23],\n",
+      "       [71, 54, 62, ..., 18, 17, 14]], dtype=uint8), array([[168, 155,  57, ..., 194, 191, 189],\n",
+      "       [148, 104,  71, ..., 189, 190, 194],\n",
+      "       [ 85,  60,  70, ..., 178, 193, 192],\n",
+      "       ...,\n",
+      "       [174, 167, 143, ...,  58,  59,  66],\n",
+      "       [173, 174, 148, ...,  58,  56,  57],\n",
+      "       [168, 176, 155, ...,  60,  57,  57]], dtype=uint8), array([[171, 129, 153, ..., 160, 158, 158],\n",
+      "       [128, 164, 148, ..., 160, 157, 155],\n",
+      "       [ 93, 115, 130, ..., 159, 156, 154],\n",
+      "       ...,\n",
+      "       [124, 123, 122, ..., 153, 158, 155],\n",
+      "       [126, 125, 122, ..., 152, 157, 155],\n",
+      "       [123, 122, 119, ..., 151, 156, 156]], dtype=uint8), array([[ 39,  30,  35, ..., 222, 194, 229],\n",
+      "       [ 61,  27,  31, ..., 242, 252, 252],\n",
+      "       [ 19,  35,  31, ..., 238, 247, 253],\n",
+      "       ...,\n",
+      "       [  2,   3,   3, ...,  11,  10,   9],\n",
+      "       [  4,   3,   3, ...,  18,  19,  19],\n",
+      "       [  6,   5,   4, ...,  14,  14,  15]], dtype=uint8), array([[ 17,  33,  27, ..., 175, 184, 191],\n",
+      "       [ 46,  37,  23, ..., 110, 103,  97],\n",
+      "       [ 79,  40,  18, ...,  76,  25,  35],\n",
+      "       ...,\n",
+      "       [  8,   1,   0, ...,  15,  16,  16],\n",
+      "       [ 27,   9,   0, ...,  15,  15,  15],\n",
+      "       [ 45,  19,   2, ...,  18,  18,  18]], dtype=uint8), array([[180, 161, 143, ...,  91,  85,  79],\n",
+      "       [176, 161, 155, ...,  91,  78,  84],\n",
+      "       [161, 151, 160, ...,  80,  85,  86],\n",
+      "       ...,\n",
+      "       [217, 228, 211, ..., 140, 154, 156],\n",
+      "       [212, 207, 187, ..., 140, 158, 157],\n",
+      "       [184, 176, 177, ..., 139, 161, 160]], dtype=uint8), array([[ 78,  75,  76, ...,  90, 102,  79],\n",
+      "       [ 75,  78,  81, ..., 126, 127, 106],\n",
+      "       [ 78,  68,  69, ..., 114, 112, 113],\n",
+      "       ...,\n",
+      "       [197, 195, 194, ..., 132, 132, 132],\n",
+      "       [202, 200, 195, ..., 133, 133, 133],\n",
+      "       [199, 198, 192, ..., 133, 133, 133]], dtype=uint8), array([[ 75,  76,  79, ...,  80,  74, 106],\n",
+      "       [ 76,  75,  74, ...,  84,  88,  82],\n",
+      "       [ 76,  78,  79, ...,  75,  87, 101],\n",
+      "       ...,\n",
+      "       [193, 194, 194, ..., 124, 125, 126],\n",
+      "       [192, 194, 195, ..., 124, 125, 126],\n",
+      "       [194, 194, 193, ..., 122, 124, 126]], dtype=uint8), array([[255, 255, 255, ...,  75,  86, 110],\n",
+      "       [255, 255, 255, ...,  75,  78, 101],\n",
+      "       [255, 255, 255, ...,  79,  69,  89],\n",
+      "       ...,\n",
+      "       [ 31,  31,  30, ...,  64,  69,  70],\n",
+      "       [ 31,  32,  32, ...,  69,  73,  74],\n",
+      "       [ 30,  32,  34, ...,  91,  75,  64]], dtype=uint8), array([[174, 181,  94, ..., 208, 215, 211],\n",
+      "       [175, 139,  88, ..., 207, 208, 208],\n",
+      "       [149, 123,  81, ..., 205, 206, 210],\n",
+      "       ...,\n",
+      "       [106, 101,  97, ..., 228, 229, 228],\n",
+      "       [102,  99,  99, ..., 227, 227, 227],\n",
+      "       [102, 100,  99, ..., 228, 227, 227]], dtype=uint8), array([[112, 109,  90, ...,  67,  72,  74],\n",
+      "       [112, 101,  93, ..., 103, 102,  92],\n",
+      "       [ 91,  98, 104, ...,  90,  81,  75],\n",
+      "       ...,\n",
+      "       [197, 192, 195, ..., 205, 214, 199],\n",
+      "       [200, 187, 193, ..., 188, 196, 194],\n",
+      "       [199, 182, 191, ..., 176, 177, 172]], dtype=uint8), array([[ 83,  91,  96, ...,  78,  66,  78],\n",
+      "       [ 90,  88,  73, ...,  78,  77,  93],\n",
+      "       [ 77,  84,  83, ...,  72,  62,  87],\n",
+      "       ...,\n",
+      "       [157, 169, 173, ..., 210, 208, 205],\n",
+      "       [143, 146, 162, ..., 166, 164, 162],\n",
+      "       [178, 178, 176, ..., 120, 120, 122]], dtype=uint8), array([[215, 164, 157, ..., 172, 176, 180],\n",
+      "       [184, 195, 180, ..., 175, 169, 174],\n",
+      "       [136, 117, 184, ..., 170, 164, 147],\n",
+      "       ...,\n",
+      "       [141, 157, 175, ..., 168, 169, 171],\n",
+      "       [158, 174, 167, ..., 159, 169, 179],\n",
+      "       [175, 174, 166, ..., 176, 191, 183]], dtype=uint8), array([[ 48,  50,  54, ...,  99,  93,  94],\n",
+      "       [ 50,  47,  51, ..., 102,  95,  90],\n",
+      "       [ 53,  50,  51, ..., 115, 111, 105],\n",
+      "       ...,\n",
+      "       [ 48,  49,  88, ..., 186, 179, 160],\n",
+      "       [ 39,  51, 133, ..., 162, 139, 122],\n",
+      "       [ 37,  37, 139, ..., 117, 108, 168]], dtype=uint8), array([[ 57,  49,  46, ..., 251, 255, 218],\n",
+      "       [ 50,  60,  51, ..., 251, 253, 250],\n",
+      "       [ 70,  56,  43, ..., 252, 253, 251],\n",
+      "       ...,\n",
+      "       [161, 167, 168, ..., 153, 155, 155],\n",
+      "       [174, 170, 175, ..., 152, 156, 158],\n",
+      "       [145, 147, 150, ..., 150, 156, 162]], dtype=uint8), array([[ 48,  52,  91, ..., 119, 143, 116],\n",
+      "       [ 56,  88, 116, ..., 122, 120, 128],\n",
+      "       [ 64,  97,  93, ..., 125, 143, 122],\n",
+      "       ...,\n",
+      "       [166, 172, 143, ..., 137, 141, 143],\n",
+      "       [178, 186, 194, ..., 134, 138, 148],\n",
+      "       [173, 182, 182, ..., 129, 139, 143]], dtype=uint8)]\n",
       "Model Training Complete!!!!!\n"
      ]
     }
@@ -118,6 +317,7 @@
    "source": [
     "#Labels를 32비트 정수로 변환\n",
     "Labels = np.asarray(Labels, dtype=np.int32)\n",
+    "print(Training_Data)\n",
     "#모델 생성 \n",
     "model = cv2.face.LBPHFaceRecognizer_create()\n",
     "#학습 시작 \n",
@@ -154,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +379,7 @@
     "            display_string = str(confidence)+'% Confidence it is user'\n",
     "        cv2.putText(image,display_string,(100,120), cv2.FONT_HERSHEY_COMPLEX,1,(250,120,255),2)\n",
     "        #77 보다 크면 동일 인물로 간주해 UnLocked! \n",
-    "        if confidence > 77:\n",
+    "        if confidence > 75:\n",
     "            cv2.putText(image, \"Unlocked\", (250, 450), cv2.FONT_HERSHEY_COMPLEX, 1, (0, 255, 0), 2)\n",
     "            cv2.imshow('Face Cropper', image)\n",
     "        else:\n",
@@ -221,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
