--- a/701_OpenCV를_통한_개인_얼굴인식.ipynb
+++ b/701_OpenCV를_통한_개인_얼굴인식.ipynb
@@ -25,6 +25,8 @@
     "※ 참고 사이트\n",
     "- 얼굴 인식하여 잠금 해제\n",
     "    https://blog.naver.com/chandong83/221436424539\n",
+    "- LBP란 무엇인가\n",
+    "    https://bskyvision.com/280\n",
     "    \n",
     "\"\"\""
    ]
